Fix modal z-index.

--- a/src/css/components/checkout/modal.styl
+++ b/src/css/components/checkout/modal.styl
@@ -9,7 +9,7 @@
   z-index: 999
   background-color: rgba(0, 0, 0, 0.75)
   transition: opacity 500ms ease
-  z-index: 2000
+  z-index: 1000
 
   &.is-open
     top: 0
